innova_data_generator/force-app/main/default/objects/Innova_Activity__c/Innova_Activity__c.object-meta.xml
<CustomObject>
    <description>This object stores all the details of an insertion performed by the User.</description>
    <label>Innova Activity</label>
    <nameField>
        <label>Innova Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Innova Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>