innova_data_generator/force-app/main/default/objects/Innova_Activity__c/fields/Inserted_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Inserted_Record_Ids__c</fullName>
    <label>Inserted Record Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>