innova_data_generator/force-app/main/default/objects/Innova_Activity__c/fields/Mode_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Creation__c</fullName>
    <description>Each tab on UI displays a mode of creation, this is used to capture mode the user selects to insert their data</description>
    <inlineHelpText>Please enter mode</inlineHelpText>
    <label>Mode of Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast Record Creation</fullName>
            </value>
            <value>
                <fullName>Multiple Record Creation (CSV)</fullName>
            </value>
            <value>
                <fullName>Sequential Record Creation</fullName>
            </value>
            <value>
                <fullName>Single Record Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>