innova_data_generator/force-app/main/default/objects/Innova_Activity__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who initiates the insertion</description>
    <inlineHelpText>The user that initiated this insert activity</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Innova_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>