innova_data_generator/force-app/main/default/objects/Innova_Activity__c/fields/Total_records_count__c.field-meta.xml
<CustomField>
    <fullName>Total_records_count__c</fullName>
    <label>Total records count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>